--- a/bindings/android/app/src/main/res/layout/activity_main.xml
+++ b/bindings/android/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginStart="0dp"
     android:layout_marginEnd="0dp"
     android:layout_marginBottom="20dp"
+    android:background="@color/bg_normal"
     android:fitsSystemWindows="true">
 
     <LinearLayout
@@ -16,18 +18,20 @@
         <!-- Spinner for model selection -->
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_marginBottom="5dp"
-            android:layout_height="50dp">
+            android:layout_height="50dp"
+            android:layout_marginBottom="5dp">
+
             <Spinner
                 android:id="@+id/sp_model_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingLeft="10dp" />
+
             <View
                 android:id="@+id/v_tip"
-                android:visibility="gone"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"/>
+                android:layout_height="50dp"
+                android:visibility="gone" />
         </FrameLayout>
 
 
@@ -35,6 +39,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <Button
@@ -67,7 +72,8 @@
                 android:text="Unload"
                 android:textAllCaps="false"
                 android:textColor="#1F1F1F"
-                android:visibility="invisible" />
+                android:visibility="gone"
+                tools:visibility="gone" />
 
             <Button
                 android:id="@+id/btn_stop"
@@ -78,7 +84,22 @@
                 android:text="Stop"
                 android:textAllCaps="false"
                 android:textColor="#1F1F1F"
-                android:visibility="invisible" />
+                android:visibility="gone"
+                tools:visibility="gone" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1px"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:id="@+id/iv_topk"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:padding="8dp"
+                android:src="@drawable/icon_topk_config"
+                android:visibility="gone" />
         </LinearLayout>
 
         <View
@@ -94,131 +115,154 @@
             android:text="test"
             android:visibility="gone" />
 
-        <!-- chat display area -->
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_chat"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:clipToPadding="false"
-            android:padding="8dp"
-            android:scrollbars="vertical" />
-
-        <!-- Input section at bottom -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_input_box_background"
-            android:paddingTop="6dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:orientation="vertical">
-
-            <HorizontalScrollView
-                android:id="@+id/scroll_images"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_margin="6dp"
-                android:overScrollMode="never"
-                android:visibility="gone">
-
-                <LinearLayout
-                    android:id="@+id/ll_images_container"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginEnd="6dp"
-                    android:orientation="horizontal" />
-            </HorizontalScrollView>
-
-            <EditText
-                android:id="@+id/et_input"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:layout_marginBottom="6dp"
-                android:background="@null"
-                android:hint="Type prompt..."
-                android:textColorHint="#ADADAD"
-                android:padding="6dp"
-                android:text="hi" />
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:orientation="horizontal">
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="horizontal"
-                    android:layout_marginRight="4dp"
-                    android:gravity="start">
-                <Button
-                    android:id="@+id/btn_add_image"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="32dp"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="4dp"
-                    android:ellipsize="end"
-                    android:singleLine="true"
-                    android:background="@drawable/btn_rounded_border"
-                    android:text="Add Image"
-                    android:textAllCaps="false"
-                    android:textColor="#1F1F1F"
-                    android:visibility="invisible"/>
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/btn_voice"
-                    android:layout_width="0dp"
+                <!-- chat display area -->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_chat"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:layout_height="32dp"
-                    android:ellipsize="end"
-                    android:singleLine="true"
-                    android:background="@drawable/btn_rounded_border"
-                    android:text="Record"
-                    android:textAllCaps="false"
-                    android:textColor="#1F1F1F"
-                    android:visibility="invisible" />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="horizontal"
-                    android:gravity="end">
-                <Button
-                    android:id="@+id/btn_clear_history"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:ellipsize="end"
-                    android:singleLine="true"
-                    android:layout_height="32dp"
-                    android:layout_marginRight="4dp"
-                    android:background="@drawable/btn_rounded_border"
-                    android:text="Clear"
-                    android:textAllCaps="false"
-                    android:textColor="#1F1F1F" />
+                    android:clipToPadding="false"
+                    android:padding="8dp"
+                    android:scrollbars="vertical"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
-                <Button
-                    android:id="@+id/btn_send"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:ellipsize="end"
-                    android:singleLine="true"
-                    android:layout_height="32dp"
-                    android:layout_marginEnd="4dp"
-                    android:background="@drawable/btn_rounded_border"
-                    android:text="Send"
-                    android:textAllCaps="false"
-                    android:textColor="#1F1F1F" />
+                <!-- Input section at bottom -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_input_box_background"
+                    android:orientation="vertical"
+                    android:paddingLeft="8dp"
+                    android:paddingTop="6dp"
+                    android:paddingRight="8dp">
+
+                    <HorizontalScrollView
+                        android:id="@+id/scroll_images"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:layout_margin="6dp"
+                        android:overScrollMode="never"
+                        android:visibility="gone">
+
+                        <LinearLayout
+                            android:id="@+id/ll_images_container"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="6dp"
+                            android:layout_marginEnd="6dp"
+                            android:orientation="horizontal" />
+                    </HorizontalScrollView>
+
+                    <EditText
+                        android:id="@+id/et_input"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="6dp"
+                        android:layout_marginBottom="6dp"
+                        android:background="@null"
+                        android:hint="Type prompt..."
+                        android:padding="6dp"
+                        android:text="hi"
+                        android:textColorHint="#ADADAD" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:paddingTop="8dp"
+                        android:paddingBottom="8dp">
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="4dp"
+                            android:layout_weight="1"
+                            android:gravity="start"
+                            android:orientation="horizontal">
+
+                            <Button
+                                android:id="@+id/btn_add_image"
+                                android:layout_width="0dp"
+                                android:layout_height="32dp"
+                                android:layout_marginLeft="4dp"
+                                android:layout_marginRight="4dp"
+                                android:layout_weight="1"
+                                android:background="@drawable/btn_rounded_border"
+                                android:ellipsize="end"
+                                android:singleLine="true"
+                                android:text="Add Image"
+                                android:textAllCaps="false"
+                                android:textColor="#1F1F1F"
+                                android:visibility="invisible" />
+
+                            <Button
+                                android:id="@+id/btn_voice"
+                                android:layout_width="0dp"
+                                android:layout_height="32dp"
+                                android:layout_weight="1"
+                                android:background="@drawable/btn_rounded_border"
+                                android:ellipsize="end"
+                                android:singleLine="true"
+                                android:text="Record"
+                                android:textAllCaps="false"
+                                android:textColor="#1F1F1F"
+                                android:visibility="invisible" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="end"
+                            android:orientation="horizontal">
+
+                            <Button
+                                android:id="@+id/btn_clear_history"
+                                android:layout_width="0dp"
+                                android:layout_height="32dp"
+                                android:layout_marginRight="4dp"
+                                android:layout_weight="1"
+                                android:background="@drawable/btn_rounded_border"
+                                android:ellipsize="end"
+                                android:singleLine="true"
+                                android:text="Clear"
+                                android:textAllCaps="false"
+                                android:textColor="#1F1F1F" />
+
+                            <Button
+                                android:id="@+id/btn_send"
+                                android:layout_width="0dp"
+                                android:layout_height="32dp"
+                                android:layout_marginEnd="4dp"
+                                android:layout_weight="1"
+                                android:background="@drawable/btn_rounded_border"
+                                android:ellipsize="end"
+                                android:singleLine="true"
+                                android:text="Send"
+                                android:textAllCaps="false"
+                                android:textColor="#1F1F1F" />
+                        </LinearLayout>
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
 
+            <FrameLayout
+                android:id="@+id/fl_index"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:clickable="true"
+                android:visibility="gone" />
+        </FrameLayout>
 
     </LinearLayout>
 
@@ -282,7 +326,7 @@
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="invisible"
-        tools:visibility="visible">
+        tools:visibility="gone">
 
         <ProgressBar
             android:id="@+id/pb_downloading"
@@ -305,7 +349,7 @@
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="invisible"
-        tools:visibility="visible">
+        tools:visibility="gone">
 
         <ProgressBar
             android:layout_width="wrap_content"
