--- a/bindings/android/app/src/main/res/values/colors.xml
+++ b/bindings/android/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="bg_normal">#F6F7F9</color>
+    <color name="font_black">#1F1F1F</color>
 </resources>
