update android sdk demo code

--- a/bindings/android/app/src/main/res/layout/activity_main.xml
+++ b/bindings/android/app/src/main/res/layout/activity_main.xml
@@ -172,7 +172,10 @@
                         android:hint="Type prompt..."
                         android:padding="6dp"
                         android:text="hi"
-                        android:textColorHint="#ADADAD" />
+                        android:textColorHint="#ADADAD"
+                        android:maxLines="6"
+                        android:scrollbars="vertical"
+                        android:inputType="textMultiLine|textCapSentences" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
