--- a/bindings/android/app/src/main/res/layout/item_ai_message.xml
+++ b/bindings/android/app/src/main/res/layout/item_ai_message.xml
@@ -2,16 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
-    android:gravity="start">
+    android:gravity="start"
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/tv_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#1F1F1F"
-        android:textSize="16sp"
         android:letterSpacing="0.02"
         android:maxWidth="320dp"
-        android:text="Hello, I am Assistant"/>
+        android:text="Hello, I am Assistant"
+        android:textColor="#1F1F1F"
+        android:textSize="16sp"
+        android:textIsSelectable="true"
+        android:linksClickable="true" />
+
 </LinearLayout>
