--- a/bindings/android/app/src/main/res/layout/activity_main.xml
+++ b/bindings/android/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  Copyright 2024-2026 Nexa AI, Inc.
+
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -159,7 +174,9 @@
                         android:hint="Type prompt..."
                         android:padding="6dp"
                         android:text="hi"
-                        android:textColorHint="#ADADAD" />
+                        android:textColorHint="#ADADAD"
+                        android:imeOptions="actionSend"
+                        android:inputType="text" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
