--- a/bindings/android/app/src/main/res/layout/item_assistant_image_message.xml
+++ b/bindings/android/app/src/main/res/layout/item_assistant_image_message.xml
@@ -18,19 +18,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="start"
-    android:orientation="vertical"
     android:padding="8dp">
 
-    <TextView
-        android:id="@+id/tv_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:letterSpacing="0.02"
-        android:maxWidth="320dp"
-        android:text="Hello, I am Assistant"
-        android:textColor="#1F1F1F"
-        android:textSize="16sp"
-        android:textIsSelectable="true"
-        android:linksClickable="true" />
+        <HorizontalScrollView
+            android:id="@+id/scroller_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scrollbars="none"
+            android:overScrollMode="never">
 
+            <LinearLayout
+                android:id="@+id/image_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" />
+        </HorizontalScrollView>
 </LinearLayout>
+
